--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "main": "src/index.js",
   "types": "src/polygon-clipping.d.ts",
   "scripts": {
-    "lint": "npm-run-all -s lint:eslint lint:prettier",
-    "lint:eslint": "eslint .eslintrc.cjs bench/ src/ test/",
-    "lint:prettier": "prettier --check ./* ./.eslintrc.cjs",
+    "lint": "eslint .eslintrc.cjs bench src test",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
     "bench": "cd bench && node bench.js",
@@ -42,13 +40,11 @@
     "@turf/union": "^5.1.5",
     "benchmark": "^2.1.4",
     "eslint": "^8.56.0",
-    "eslint-config-prettier": "^8.10.0",
     "jest": "^27.5.1",
     "leaflet": "^1.9.4",
     "load-json-file": "^6.2.0",
     "martinez-polygon-clipping": "^0.7.3",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.8"
+    "npm-run-all": "^4.1.5"
   },
   "dependencies": {
     "robust-predicates": "^3.0.2",
