--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "polyclip",
   "version": "0.15.7",
   "description": "Apply boolean polygon clipping operations (intersection, union, difference, xor) to your Polygons & MultiPolygons.",
+  "main": "./src/index.js",
   "exports": "./src/index.js",
   "scripts": {
     "bench": "node bench/bench.js",
