--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "bench": "node bench/bench.js",
     "lint": "eslint *.js bench src test",
     "prepublishOnly": "npm-run-all --serial lint test bench",
-    "test": "jest",
+    "test": "node --test test/*.test.js",
     "typecheck": "tsc"
   },
   "files": [
@@ -35,14 +35,10 @@
   "license": "MIT",
   "devDependencies": {
     "@arbendium/eslint-config-base": "^0.2.2",
-    "@babel/plugin-transform-modules-commonjs": "^7.24.7",
-    "@babel/preset-typescript": "^7.24.7",
-    "@jest/globals": "^29.7.0",
     "@turf/union": "^6.5.0",
     "@types/node": "^20.14.2",
     "benchmark": "^2.1.4",
     "eslint": "^8.57.0",
-    "jest": "^29.7.0",
     "martinez-polygon-clipping": "^0.7.3",
     "npm-run-all": "^4.1.5"
   },
