--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "scripts": {
     "bench": "node bench/bench.js",
     "lint": "eslint *.js bench lib test",
-    "prepublishOnly": "npm-run-all --serial lint test bench",
     "test": "node --test test/*.test.js",
     "typecheck": "tsc"
   },
@@ -39,8 +38,7 @@
     "@types/node": "^20.14.2",
     "benchmark": "^2.1.4",
     "eslint": "^8.57.0",
-    "martinez-polygon-clipping": "^0.7.3",
-    "npm-run-all": "^4.1.5"
+    "martinez-polygon-clipping": "^0.7.3"
   },
   "dependencies": {
     "bignumber.js": "^9.1.2",
