Fixed exposing types as ESM

--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "version": "0.15.7",
   "description": "Apply boolean polygon clipping operations (intersection, union, difference, xor) to your Polygons & MultiPolygons.",
   "main": "./lib/index.js",
-  "exports": "./lib/index.js",
-  "types": "./lib/polyclip.d.ts",
+  "exports": {
+    "import": "./lib/index.js",
+    "types": "./lib/index.d.ts"
+  },
   "scripts": {
     "bench": "node bench/bench.js",
     "lint": "eslint *.js bench lib test",
